--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form class="form">
+      <input
+        class="input"
+        type="text"
+        name="value"
+        placeholder="Search images..."
+        required
+      />
+      <button class="click-btn" type="submit">Search</button>
+    </form>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <ul class="gallery"></ul>
+    <button class="btn-load-more click-btn">Load more</button>
+    <span class="loader"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
